Bug 593525 Listing nsIMsgDBHdrs for an array of indices should not delete them r=bienvenu